Creación de ordenes en BD y token arreglado

--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://horellanac2:UVThn8VNOSEGBy6L@cluster0.o6fvydz.mongodb.net/CCE3D?retryWrites=true&w=majority
+JWT_SECRET=TextoRandom
