--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "leaflet": "^1.9.4",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
+    "three": "^0.155.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -30,6 +31,7 @@
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
+    "@types/three": "^0.155.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
