--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "leaflet": "^1.9.4",
+    "multer": "^1.4.5-lts.1",
     "ngx-toastr": "^16.2.0",
+    "pdf-lib": "^1.17.1",
     "rxjs": "~7.8.0",
     "three": "^0.155.0",
     "tslib": "^2.3.0",
